--- a/source/test.ui
+++ b/source/test.ui
@@ -14,8 +14,20 @@
    <string>organizationalPerson</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
    <item row="0" column="0">
     <layout class="QFormLayout" name="formLayout">
+     <property name="labelAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="horizontalSpacing">
+      <number>-1</number>
+     </property>
+     <property name="verticalSpacing">
+      <number>-1</number>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="snLabel">
        <property name="text">
@@ -24,7 +36,17 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="snEdit"/>
+      <widget class="QLineEdit" name="snEdit">
+       <property name="maximumSize">
+        <size>
+         <width>50</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="maxLength">
+        <number>17</number>
+       </property>
+      </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="cnLabel">
@@ -36,7 +58,7 @@
      <item row="1" column="1">
       <widget class="QLineEdit" name="cnEdit">
        <property name="toolTip">
-        <string comment="Common name" extracomment="The common name of on object"/>
+        <string>Common name</string>
        </property>
       </widget>
      </item>
@@ -84,7 +106,7 @@
      <item row="5" column="1">
       <widget class="QLineEdit" name="titleEdit">
        <property name="echoMode">
-        <enum>QLineEdit::NoEcho</enum>
+        <enum>QLineEdit::Password</enum>
        </property>
       </widget>
      </item>
@@ -157,7 +179,11 @@
       </widget>
      </item>
      <item row="11" column="1">
-      <widget class="QLineEdit" name="ouEdit"/>
+      <widget class="QLineEdit" name="ouEdit">
+       <property name="placeholderText">
+        <string>Platzhalter</string>
+       </property>
+      </widget>
      </item>
      <item row="12" column="0">
       <widget class="QLabel" name="preferredDeliveryMethodLabel">
@@ -167,7 +193,11 @@
       </widget>
      </item>
      <item row="12" column="1">
-      <widget class="QComboBox" name="preferredDeliveryMethodEdit"/>
+      <widget class="QComboBox" name="preferredDeliveryMethodEdit">
+       <property name="editable">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
      <item row="13" column="0">
       <widget class="QLabel" name="x121AddressLabel">
