--- a/source/test.ui
+++ b/source/test.ui
@@ -6,28 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>466</height>
+    <width>481</width>
+    <height>440</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>organizationalPerson</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <property name="spacing">
-    <number>0</number>
-   </property>
    <item row="0" column="0">
     <layout class="QFormLayout" name="formLayout">
-     <property name="labelAlignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-     </property>
-     <property name="horizontalSpacing">
-      <number>-1</number>
-     </property>
-     <property name="verticalSpacing">
-      <number>-1</number>
-     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="snLabel">
        <property name="text">
@@ -193,11 +181,28 @@
       </widget>
      </item>
      <item row="12" column="1">
-      <widget class="QComboBox" name="preferredDeliveryMethodEdit">
-       <property name="editable">
-        <bool>true</bool>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QComboBox" name="preferredDeliveryMethodEdit">
+         <property name="editable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </item>
      <item row="13" column="0">
       <widget class="QLabel" name="x121AddressLabel">
@@ -220,23 +225,13 @@
       <widget class="QLineEdit" name="internationaliSDNNumberEdit"/>
      </item>
      <item row="15" column="0">
-      <widget class="QLabel" name="snLabel">
-       <property name="text">
-        <string>sn</string>
-       </property>
-      </widget>
-     </item>
-     <item row="15" column="1">
-      <widget class="QLineEdit" name="snEdit"/>
-     </item>
-     <item row="16" column="0">
       <widget class="QLabel" name="destinationIndicatorLabel">
        <property name="text">
         <string>destinationIndicator</string>
        </property>
       </widget>
      </item>
-     <item row="16" column="1">
+     <item row="15" column="1">
       <widget class="QLineEdit" name="destinationIndicatorEdit"/>
      </item>
     </layout>
