--- a/source/test3.ui
+++ b/source/test3.ui
@@ -50,7 +50,7 @@
         </sizepolicy>
        </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>1</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
@@ -113,6 +113,12 @@
              </item>
              <item>
               <widget class="QDateEdit" name="dateEdit"/>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="spinBox"/>
+             </item>
+             <item>
+              <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
              </item>
             </layout>
            </item>
