--- a/source/test.ui
+++ b/source/test.ui
@@ -177,7 +177,7 @@
           </sizepolicy>
          </property>
          <property name="editable">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
         </widget>
        </item>
